feat：修改系统名称为安之眸企业管理系统； 新增企业切换按钮功能

--- a/dictionary.html
+++ b/dictionary.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>字典管理 - 企业后台管理系统</title>
+  <title>字典管理 - 安之眸企业管理系统</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="data.js"></script>
   <script src="layout.js"></script>
