--- a/server.html
+++ b/server.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>服务器管理 - 企业后台管理系统</title>
+  <title>服务器管理 - 安之眸企业管理系统</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="data.js"></script>
   <script src="layout.js"></script>
 </head>
 <body class="bg-gray-100 font-sans antialiased h-screen flex overflow-hidden" id="app">
